Написаны тесты.