@@ -1,18 +1,19 @@
 package ru.epicprojects.localities.utils;
 
 import lombok.extern.slf4j.Slf4j;
+import ru.epicprojects.localities.dao.AssistanceEntity;
+import ru.epicprojects.localities.dao.AttractionCompositeAK;
 import ru.epicprojects.localities.dao.AttractionEntity;
+import ru.epicprojects.localities.dto.AssistanceDTO;
 import ru.epicprojects.localities.dto.AttractionDTO;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * Утилитный класс для преобразования между объектами DTO и сущностями
- * аттракций.
- *
- * Этот класс предоставляет статические методы для конвертации объектов
- * {@link AttractionDTO} в {@link AttractionEntity} и наоборот.
+ * Вспомогательный класс для преобразования DTO и сущностями
+ * достопримечательностей.
  */
 @Slf4j
 public class AttractionUtil {
@@ -20,16 +21,22 @@ public class AttractionUtil {
     /**
      * Преобразует объект DTO {@link AttractionDTO} в сущность {@link AttractionEntity}.
      *
-     * @param attractionDTO объект DTO, представляющий аттракцию
-     * @return сущность аттракции, соответствующая переданному DTO
+     * @param attractionDTO объект DTO, представляющий достопримечательность
+     * @return сущность достопримечательности, соответствующая переданному DTO
      */
     public static AttractionEntity toEntity(AttractionDTO attractionDTO){
         log.debug("Converting AttractionDTO to AttractionEntity: {}", attractionDTO);
         AttractionEntity entity = new AttractionEntity();
-        entity.setName(attractionDTO.getName());
-        entity.setCreatedAt(attractionDTO.getCreatedAt());
+        AttractionCompositeAK ak = new AttractionCompositeAK();
+        ak.setName(attractionDTO.getName());
+        entity.setAttractionCompositeAK(ak);
         entity.setShortDescription(attractionDTO.getShortDescription());
         entity.setType(attractionDTO.getType());
+
+        List<AssistanceEntity> assistances = Collections.emptyList();
+        if(attractionDTO.getAssistances() != null)
+                assistances = attractionDTO.getAssistances().stream().map(AssistanceUtil::toEntity).toList();
+        entity.setAssistances(assistances);
         log.debug("Converted to AttractionEntity: {}", entity);
         return entity;
     }
@@ -43,17 +50,14 @@ public class AttractionUtil {
     public static AttractionDTO toDTO(AttractionEntity attractionEntity){
         log.debug("Converting AttractionEntity to AttractionDTO: {}", attractionEntity);
         AttractionDTO attractionDTO = new AttractionDTO();
-        attractionDTO.setName(attractionEntity.getName());
+        attractionDTO.setName(attractionEntity.getAttractionCompositeAK().getName());
         attractionDTO.setType(attractionEntity.getType());
-        attractionDTO.setId(attractionEntity.getId());
         attractionDTO.setCreatedAt(attractionEntity.getCreatedAt());
-        attractionDTO.setLocalityId(attractionEntity.getLocality().getId());
         attractionDTO.setShortDescription(attractionEntity.getShortDescription());
-
-        List<Long> assistanceIds = attractionEntity.getAssistances().stream()
-                .map((assistanceEntity) -> assistanceEntity.getId())
-                .collect(Collectors.toList());
-        attractionDTO.setAssistanceIds(assistanceIds);
+        List<AssistanceDTO> assistances = Collections.emptyList();
+        if(attractionEntity.getAssistances() != null)
+            assistances = attractionEntity.getAssistances().stream().map(AssistanceUtil::toDTO).toList();
+        attractionDTO.setAssistances(assistances);
         log.debug("Converted to AttractionDTO: {}", attractionDTO);
         return attractionDTO;
     }
